# EVC_Group_5_2025

./: README.md
src/: launch_camera_publisher.sh  launch_display.sh  launch_identification.sh  launch_motor_node.sh  launch_new_detection.sh  (+2 more)
src/final/: CMakeLists.txt  package.xml
src/final/config/: parameters.yaml
src/final/launch/: camera_publisher_top.launch  person_id.launch  pipeline.launch  pipeline_display.launch  test_listener.launch  tracking_test.launch
src/final/launch/S1/: S1.launch  S1_display.launch  bb_img_publisher.launch  bb_img_subscriber.launch  camera_publisher.launch  vision_detection.launch
src/final/launch/S2/: S2.launch  person_identification.launch
src/final/launch/S3/: S3.launch  tracking.launch  tracking_old.launch
src/final/launch/S4/: S4.launch  obstacle_avoidance.launch  obstacle_reader.launch  obstacle_sensing.launch
src/final/launch/S5/: S5.launch  motor.launch  search_path.launch  state_manager.launch
src/final/msg/: DetectedLines.msg  DetectedPerson.msg  DualCompressedImage.msg
src/final/src/1_vision_detection/: bb_img_publisher_node.py  bb_img_subscriber_node.py  camera_publisher_node.py  person_cropper.py  vision_detection_node.py
src/final/src/2_identification/: person_reid_node.py
src/final/src/2_identification/models/: osnet_x0_5.onnx  osnet_x0_5_fp16.engine
src/final/src/3_tracking/: tracking.py
src/final/src/4_obstacle/: Reader_node.py  obstacle_avoidance_node.py  tofDriver.py  tof_sensor_node.py
src/final/src/5_state/: motorDriver.py  motor_node.py  search_path_node.py  state_manager_node.py
(+5 files in other folders)
